--- a/_posts/2015-12-02-markdown语法.markdown
+++ b/_posts/2015-12-02-markdown语法.markdown
@@ -6,7 +6,7 @@ categories: markdown语法
 ---
 
 ---
-**标题**  
+**1.标题**  
 
 总共有六种标题，＃号需要在一行的最前面，一级标题一个＃号，二级标题两个＃号，...
 
@@ -15,12 +15,14 @@ categories: markdown语法
 ## 二级标题
 
 ---
-**换行**    
+**2. 换行**  
+  
 可以使用html里面的"\<br>"  
-也可以在每一行最后面空出至少两个空格后在换行   
+也可以在<a>每一行最后面空出至少两个空格后在换行</a>   
  
 ---
-**列表**  
+**3. 列表**  
+
 使用－、＊、＋ 即可变为无序列表  
 
 * aaa
@@ -37,30 +39,33 @@ categories: markdown语法
 		3. c
 		
 ---
-**引用**
+**4. 引用**
+
 需要在文本前加上 > (尖括号、大于号)即可
 
 >这是引用
 
 ---
 
-**图片与链接**
+**5. 图片与链接**
 
 图片为： ![](){ImgCap}{/ImgCap}  
 链接为:  []()
-
-	直接引用为: <>(一对尖括号)貌似不起作用了
-	www.google.com.hk
+直接引用为: <>(一对尖括号) 
+	
+<http://www.google.com.hk>
 
 
 	
 ---
-*粗体与斜体*
+*6. 粗体与斜体*
+
 
 两个\*号包含一段文本就是粗体，一个\*包含就是斜体
 
 ---
-**表格**
+**7. 表格**
+
 
 	|Tables   | A   |B     |
 	| --------|:---:|:----:|
@@ -77,7 +82,8 @@ categories: markdown语法
 
 ---
 
-**代码框**  
+**8. 代码框**  
+
 程序猿需要代码框,将代码用两个`（esc键）包起来(貌似有点问题)
 
 
@@ -88,13 +94,15 @@ categories: markdown语法
 	
 ***
 
-**分割线**
+**9. 分割线**  
+
 
 三个 * 或者三个 －
 
 ***
 
-**代码高亮**  
+**10. 代码高亮**  
+
 
 {% highlight c++ %}
 
@@ -108,9 +116,33 @@ categories: markdown语法
 {% endhighlight %}
 	
 ---
+ ** 11. 可用html的语法来控制markdown的排版 **
+ 
+ <a> markdown 文档也可以通过html的语法来控制文档的格式</a>
+ 
+ 
+ 
+---
+
+ __12. 以下是一些其他的用法，我也就不一一说明了，有兴趣的自己看吧__
+
+双下划线 __Hello__  
+单下划线 _Heßllo_  
+Hello   等于号
+=====
+Hello     下划线 
+-----
+> \<p> 段落的使用
+<p>
+  雄关漫道真如铁，而今迈道从头越。
+<p>
+
+
+---
 
 
  **参考资料**  
  
- <http://www.jianshu.com/p/1e402922ee32/>
-
+ <http://www.jianshu.com/p/1e402922ee32/>  
+ <http://www.appinn.com/markdown/#p>  
+ <http://ibruce.info/2013/11/26/markdown/>
