--- a/_posts/2015-12-04-C++嵌套类和局部类.markdown
+++ b/_posts/2015-12-04-C++嵌套类和局部类.markdown
@@ -71,6 +71,8 @@ categories:	 C++
 		return 0;
 	}
 	
+![1.png](../_assert/1.png)
+	
 	// netsed_class_declarations.cpp À´×ÔMSDN
 	class BufferedIO 
 	{
