--- a/_posts/2016-04-12-C++仿函数.md
+++ b/_posts/2016-04-12-C++仿函数.md
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: "C++·Âº¯Êý"
+title: "C++ä»¿å‡½æ•°"
 date: 2016-4-12 12:30:00 +0800
-categories: C++·Âº¯Êý
+categories: C++ä»¿å‡½æ•°
 ---
 
-> ·Âº¯Êý¼òµ¥À´Ëµ,¾ÍÊÇÖØ¶¨ÒåÁË³ÉÔ±º¯Êýoperator()µÄÒ»ÖÖ×Ô¶¨ÒåÀàÐÍ¶ÔÏó
+> ä»¿å‡½æ•°ç®€å•æ¥è¯´,å°±æ˜¯é‡å®šä¹‰äº†æˆå‘˜å‡½æ•°operator()çš„ä¸€ç§è‡ªå®šä¹‰ç±»åž‹å¯¹è±¡
 
 
 {% highlight c++ %}
