添加读书心得

--- a/_posts/2019-04-03-游戏切场景socket缓冲区溢出的问题.md
+++ b/_posts/2019-04-03-游戏切场景socket缓冲区溢出的问题.md
@@ -17,4 +17,6 @@
     现在主流的切场景做法是怎样的呢？   
     1、每次重新读数据库，只带少量玩家数据过去？  
     2、对玩家数据做压缩处理，以时间换空间？  
+    3、进副本时只带少数信息过去，副本的结算逻辑，等到玩家出来副本后，再结算，更新相关的逻辑  
+    4、使用redis、memcache等内存数据库，加快读取信息的速度，减少时间延迟
 
